# sdl-gpu

./: .appveyor.yml  .gitignore  .travis.yml  Android.mk  CMakeLists.txt  Downloads.md  Doxyfile  Doxyfile-orig  Doxyfile.in  ImplementationNotes.md  LICENSE.txt  MainPage.md  ProjectHome.md  README.md  README.txt  RoadMap.md  SDL__gpu_8h_source.html  SDL__gpu__GLES__1_8h_source.html  SDL__gpu__GLES__2_8h_source.html  SDL__gpu__GLES__3_8h_source.html  SDL__gpu__OpenGL__1_8h_source.html  SDL__gpu__OpenGL__1__BASE_8h_source.html  SDL__gpu__OpenGL__2_8h_source.html  SDL__gpu__OpenGL__3_8h_source.html  SDL__gpu__OpenGL__4_8h_source.html  SDL__gpu__RendererImpl_8h_source.html  annotated.html  appveyor.yml  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  (+137 more)
SDL_gpuShapes/: CMakeLists.txt  SDL_gpuShapes.c  SDL_gpuShapes.h
SOIL/: CMakeLists.txt
demos/: CMakeLists.txt  Demos.cbp
demos/3d/: main.c
demos/3d-gl3/: main.c
demos/blend/: main.c
demos/blend-mode/: main.c
demos/blit-batch/: main.c
demos/camera/: main.c
demos/clip/: main.c
demos/color/: main.c
demos/common/: common.c  common.h  compat.h
demos/copy/: main.c
demos/create/: main.c
demos/data/shaders/: alpha_mask.frag  marching_ants.frag  untextured-150.frag  untextured-150.vert  untextured.frag  untextured.vert
demos/features/: main.c
demos/get-pixel/: main.c
demos/image-formats/: main.c
demos/init/: main.c
demos/mipmap/: main.c
demos/multitexture/: main.c
demos/nanovg/: main.c
demos/npot/: main.c
demos/pixel-perfect/: main.c
demos/polygon-blit/: main.c
demos/render-target/: main.c
demos/renderer/: main.c
demos/rotate/: main.c
demos/sandbox/: main.c
demos/save/: main.c
demos/scale/: main.c
demos/scaling/: main.c
demos/shader/: blue_sprites.vert  main.c  test3.frag
demos/shader-attributes/: main.c
demos/shapes/: main.c
demos/simple-shader/: main.c
demos/sprite/: main.c
demos/sprite-stress/: main.c
demos/subsurface/: main.c
demos/transform/: main.c
demos/transform-matrix/: main.c
demos/transformx/: main.c
demos/triangle-batch/: main.c
demos/tutorial-space/: main.c
demos/upload-image/: main.c
demos/video/: main.c
demos/viewport/: main.c
demos/virtual-resolution/: main.c
demos/windows/: main.c
demos/windows2/: main.c
demos/wrap/: main.c
demos/write-to-img/: main.c
src/: CMakeLists.txt  SDL2_gpu.pc.in  SDL_gpu.c  SDL_gpu.pc.in  SDL_gpu_matrix.c  SDL_gpu_renderer.c  SDL_gpu_shapes.c  groups.dox  mainpage.dox  renderer_GLES_1.c  renderer_GLES_2.c  renderer_GLES_3.c  renderer_GL_common.inl  renderer_OpenGL_1.c  renderer_OpenGL_1_BASE.c  renderer_OpenGL_2.c  renderer_OpenGL_3.c  renderer_OpenGL_4.c  renderer_shapes_GL_common.inl
tests/: CMakeLists.txt
tests/alias/: main.c
tests/anchor/: main.c
tests/blend/: main.c
tests/blit-batch/: main.c
tests/camera-matrix/: main.c
tests/clip/: main.c
tests/color/: main.c
tests/coordinate-mode/: main.c
tests/copy/: main.c
tests/create/: main.c
tests/data/shaders/: multitexture.frag  pass_color.frag  texture_color_mod.frag  time_mod.frag
tests/depth/: main.c
tests/features/: main.c
tests/get-pixel/: main.c
tests/hotspot/: main.c
tests/image-formats/: main.c
tests/memory/: main.c
tests/mipmap/: main.c
tests/multitexture/: main.c
tests/multitexture-blit/: main.c
tests/npot/: main.c
tests/pixel-perfect/: main.c
tests/polygon-blit/: main.c
tests/reinit/: main.c
tests/render-target/: main.c
tests/renderer/: main.c
tests/replace-image/: main.c
tests/rotate/: main.c
tests/sandbox/: main.c
tests/save/: main.c
tests/scale/: main.c
tests/shader/: main.c  pass_color.frag  test.vert  texture_color_mod.vert
tests/shader-attributes/: main.c
tests/shapes/: main.c
tests/sprite/: main.c
tests/sprite-emscripten/: main.c
tests/sprite-stress/: main.c
tests/transform/: main.c
tests/transform-matrix/: main.c
tests/transformx/: main.c
tests/triangle-batch/: main.c
tests/upload-image/: main.c
tests/video/: main.c
tests/viewport/: main.c
tests/windows/: main.c
tests/windows2/: main.c
tests/wrap/: main.c
tools/: CMakeLists.txt
tools/compare-images-src/: main.c
tools/thumb-viewer-src/: main.c
trunk/: Android.mk  CMakeLists.txt  Doxyfile  README-ios.txt  README.txt
trunk/CMake_scripts/: FindSTBI_write.cmake
trunk/Direct3D/: SDL_gpu_Direct3D.c
trunk/OpenGL/: SDL_gpuShapes_OpenGL.c  SDL_gpuShapes_OpenGL.h  SDL_gpuShapes_OpenGL_internal.h  SDL_gpu_OpenGL.c  SDL_gpu_OpenGL.h  SDL_gpu_OpenGL_internal.h
trunk/SDL_gpu/: Android.mk  CMakeLists.txt  SDL_gpu.c  SDL_gpu.h  SDL_gpuShapes.c  SDL_gpu_Renderer.c  SDL_gpu_Renderer.h  SDL_gpu_RendererImpl.h  SDL_gpu_matrix.c  mainpage.dox
trunk/SDL_gpu/Direct3D/: SDL_gpuShapes_Direct3D.c  SDL_gpu_Direct3D.h  SDL_gpu_Direct3D_internal.h
trunk/SDL_gpu/GLES_1/: SDL_gpu_GLES_1.c  SDL_gpu_GLES_1.h
trunk/SDL_gpu/GLES_2/: SDL_gpu_GLES_2.c  SDL_gpu_GLES_2.h
trunk/SDL_gpu/GL_common/: SDL_gpuShapes_GL_common.inl  SDL_gpu_GL_common.inl  SDL_gpu_GL_matrix.c  SDL_gpu_GL_matrix.h
trunk/SDL_gpu/OpenGL/: SDL_gpuShapes_OpenGL.c  (+3 more)
trunk/SDL_gpuShapes/: CMakeLists.txt  SDL_gpuShapes.c  SDL_gpuShapes.h
trunk/SOIL/: CMakeLists.txt  stb_image_aug.c
trunk/common/: common.c  common.h  compat.h  demo-font.h
trunk/demos/: CMakeLists.txt
trunk/include/: SDL_gpu.h  SDL_gpu_GLES_2.h  SDL_gpu_OpenGL_1.h  SDL_gpu_OpenGL_1_BASE.h  SDL_gpu_OpenGL_2.h  SDL_gpu_RendererImpl.h
trunk/source/: CMakeLists.txt  SDL_gpu.h
trunk/src/: SDL_gpu.c  SDL_gpu_renderer.c  SDL_gpu_shapes.c  renderer_GLES_1.c  renderer_GLES_2.c  renderer_GL_common.inl  renderer_OpenGL_1.c  renderer_OpenGL_1_BASE.c  renderer_OpenGL_2.c  renderer_shapes_GL_common.inl
trunk/tests/: CMakeLists.txt
trunk/tools/: CMakeLists.txt
(+2528 files in other folders)
